# cmake

./: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  Makefile  README.md
cmd/hello1/: CMakeLists.txt  main.go
cmd/hello2/: CMakeLists.txt  main.go
docs/: quick_start.md
hello/: .built-in.o.cmd  .function.o.cmd  .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  .kohello.o.cmd  CMakeLists.txt  Kbuild  function.c  function.h  hello.h  kohello.c
hello/.tmp_versions/: hello.mod
lib/: CMakeLists.txt  hello.h  libhello.c
misc/: test.in
misc/deb/: postinst.in  postrm.in  prerm.in
misc/rpm/: postinst.in  postrm.in  posttrans.in  prerm.in
pkg/user/: user.go
scripts/: general.cmake  golang.cmake  make.sh  pack.sh  util.cmake
